--- a/src/views/layouts/index.ejs
+++ b/src/views/layouts/index.ejs
@@ -41,6 +41,9 @@
             <li class="nav-item <%= title === 'Supplier' && 'active' %>">
               <a class="nav-link" href="/supplier">Supplier</a>
             </li>
+            <li class="nav-item <%= title === 'Alternatif' && 'active' %>">
+              <a class="nav-link" href="/alternatif">Alternatif</a>
+            </li>
             <li class="nav-item <%= title === 'Kriteria' && 'active' %>">
               <a class="nav-link" href="/criteria">Kriteria</a>
             </li>
