--- a/src/views/layouts/index.ejs
+++ b/src/views/layouts/index.ejs
@@ -47,6 +47,9 @@
             <li class="nav-item <%= title === 'Kriteria' && 'active' %>">
               <a class="nav-link" href="/criteria">Kriteria</a>
             </li>
+            <li class="nav-item <%= title === 'Nilai Target' && 'active' %>">
+              <a class="nav-link" href="/nilaitarget">Nilai Target</a>
+            </li>
           </ul>
           <form class="form-inline my-2 my-lg-0" action="/login/logout" method="POST">
             <button class="btn btn-danger my-2 my-sm-0" type="submit">
