update: change name

--- a/src/views/layouts/index.ejs
+++ b/src/views/layouts/index.ejs
@@ -39,13 +39,7 @@
               <a class="nav-link" href="dashboard">Dashboard</a>
             </li>
             <li class="nav-item <%= title === 'Supplier' && 'active' %>">
-              <a class="nav-link" href="/supplier">Supplier</a>
-            </li>
-            <li class="nav-item <%= title === 'Alternatif' && 'active' %>">
-              <a class="nav-link" href="/alternatif">Alternatif</a>
-            </li>
-            <li class="nav-item <%= title === 'Kriteria' && 'active' %>">
-              <a class="nav-link" href="/criteria">Kriteria</a>
+              <a class="nav-link" href="/alternatif">Supplier</a>
             </li>
             <li class="nav-item <%= title === 'Nilai Target' && 'active' %>">
               <a class="nav-link" href="/nilaitarget">Nilai Target</a>
