--- a/src/views/alternatif/form.ejs
+++ b/src/views/alternatif/form.ejs
@@ -48,7 +48,7 @@
         </div>
       </div>
       <% }) %>
-      <div class="col-md-12">
+      <div class="col-md-12 mb-3">
         <button type="submit" class="btn btn-primary col-md-12">Simpan Data</button>
     </div>
 </form>
