--- a/src/views/dashboard.ejs
+++ b/src/views/dashboard.ejs
@@ -6,7 +6,7 @@
       <div class="card-body">
         <div class="row no-gutters align-items-center">
           <div class="col mr-2">
-            <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">Total Supplier</div>
+            <div class="text-xs font-weight-bold text-info text-uppercase mb-1">Total Supplier</div>
             <div class="h5 mb-0 font-weight-bold text-gray-800"><%= totalSupplier %></div>
           </div>
           <div class="col-auto">
@@ -49,7 +49,7 @@
         </p>
       </div>
       <% } else { %>
-        <a href="/hitung/hitung" class="float-right btn btn-sm btn-primary"><i class="fas fa-calculator"></i> Hitung</a>
+        <a href="/hitung/" class="float-right btn btn-sm btn-primary"><i class="fas fa-calculator"></i> Hitung</a>
       </div>
       <div class="card-body">
         <table class="table table-bordered" id="dataTable" url="/dashboard/table" width="100%" cellspacing="0"></table>
