chore: Update flash messages for supplier data changes

--- a/src/views/layouts/index.ejs
+++ b/src/views/layouts/index.ejs
@@ -42,7 +42,7 @@
               <a class="nav-link" href="/alternatif">Supplier</a>
             </li>
             <li class="nav-item <%= title === 'Nilai Target' && 'active' %>">
-              <a class="nav-link" href="/nilaitarget">Nilai Target</a>
+              <a class="nav-link" href="/nilaitarget">Kriteria</a>
             </li>
           </ul>
           <form class="form-inline my-2 my-lg-0" action="/login/logout" method="POST">
